1999-01-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (is_printable): fix a casting problem.
	* hex-document.c: removed GNOME_ENABLE_DEBUG.
	
1999-01-19  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (gtk_hex_key_press): return FALSE if we don't handle
	the key press event. this is the Right Behaviour, I guess.
	* hex-document.h: new member undo_top pointing to the stack
	top (contains data for the next UNDO and its predecessor (if
	it exists) contains data for the next REDO.
	* hex-document.c: implemented redo capabilities. actions that
	have been undone can be redone as long as no new changes are
	entered. as soon as something changes we forget the undone
	actions (part of stack between undo_stack and stack_top) and
	start pushing new undo data on top of undo_top.
	* callbacks.c (view_changed_cb): take care of the redo item's
	sensitivity.

1999-01-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.h (struct _HexChangeData): extended to hold all
	info necessary for undo implementation.
	(struct _HexDocument): new undo_stack, undo_depth, undo_max members.
	added a gboolean parameter to document_changed signal to let the
	handler know whether undo data should be saved.
	* hex_document.c (undo_stack_*): new functions for pushing/popping
	undo data on/from undo stack and for freeing it.
	(hex_document_real_changed): if desired, push undo data on stack.
	(undo_cb): a menuitem callback to undo the last action.
	(hex_document_set_nibble): new public function.
	* gtkhex.c (gtk_hex_key_press): use hex_document_set_nibble().
	(gtk_hex_data_changed): removed.
	* callbacks.c (view_changed_cb): set sensitivity of undo item
	depending of emptiness of the undo stack.
	* callbacks.h (struct _ReplaceCBData): removed.
	made prototypes nicer.

1999-01-12  Christopher Blizzard  <blizzard@appliedtheory.com>

	* callbacks.c: free up pointer after use.

	* ghex.h (GROUP_MENU_PATH): use g_strconcat() in macro, not
 	alloca() function.
